// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an article 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some byline"
          name="author"
        />
        <meta
          content="Some Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          property="og:image"
        />
        <meta
          content="Some Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          name="twitter:image"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    SOME LABEL
                  </div>
                </div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Headline
                </h1>
                <div
                  aria-level="2"
                  role="heading"
                >
                  Some Standfirst
                </div>
                <div>
                  <ArticleFlags
                    flags={
                      Array [
                        Object {
                          "expiryTime": "2019-03-14T12:00:00.000Z",
                          "type": "NEW",
                        },
                      ]
                    }
                  />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks
                        ast={
                          Array [
                            Object {
                              "byline": Array [
                                Object {
                                  "attributes": Object {},
                                  "children": Array [
                                    Object {
                                      "attributes": Object {
                                        "value": "Some byline",
                                      },
                                      "children": Array [],
                                      "name": "text",
                                    },
                                  ],
                                  "name": "inline",
                                },
                              ],
                            },
                          ]
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <figure>
              <div>
                <div>
                  <div>
                    <img
                      alt="Some Caption"
                      fetchpriority="high"
                      src="https://crop169.io?resize=360"
                      srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                    />
                  </div>
                </div>
              </div>
              <figcaption>
                <div>
                  <div>
                    <div>
                      <div>
                        Some Caption
                      </div>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SOME CREDITS",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </figcaption>
            </figure>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks
                    ast={
                      Array [
                        Object {
                          "byline": Array [
                            Object {
                              "attributes": Object {},
                              "children": Array [
                                Object {
                                  "attributes": Object {
                                    "value": "Some byline",
                                  },
                                  "children": Array [],
                                  "name": "text",
                                },
                              ],
                              "name": "inline",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <p>
            Some content
          </p>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline="Some Headline"
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticleSlice={
              Object {
                "__typename": "StandardSlice",
                "items": Array [
                  Object {
                    "article": Object {
                      "__typename": "Article",
                      "bylines": Array [],
                      "hasVideo": false,
                      "headline": "RA Headline",
                      "id": "ra-1",
                      "label": "RA Label",
                      "leadAsset": Object {
                        "__typename": "Image",
                        "crop169": Object {
                          "__typename": "Crop",
                          "url": "https://racrop169.io",
                        },
                        "crop32": Object {
                          "__typename": "Crop",
                          "url": "https://racrop32.io",
                        },
                        "title": "RA Title",
                      },
                      "publicationName": "TIMES",
                      "publishedTime": "2015-03-23T19:39:39.000Z",
                      "shortHeadline": "Headline",
                      "shortIdentifier": "2k629tpvh",
                      "slug": "this-is-slug",
                      "summary105": Array [],
                      "summary125": Array [],
                      "summary145": Array [],
                      "summary160": Array [],
                      "summary175": Array [],
                      "summary225": Array [],
                      "url": "https://ra.io",
                    },
                  },
                ],
              }
            }
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;

exports[`2. loading 1`] = `null`;

exports[`3. an error 1`] = `null`;

exports[`4. an article with no headline falls back to use shortheadline 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Short Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Short Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some Short Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="Some Short Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Short Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":null,"caption":null},"thumbnailUrl":null,"dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Organization","name":"The Times"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Short Headline
                </h1>
                <div>
                  <ArticleFlags />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <p>
            Some content
          </p>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline=""
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;

exports[`5. an article with ads 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="Some Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":null,"caption":null},"thumbnailUrl":null,"dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Organization","name":"The Times"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Headline
                </h1>
                <div>
                  <ArticleFlags />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <div>
            <h2>
              Advertisement
            </h2>
            <AdContainer
              slotName="inline-ad"
            />
          </div>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline="Some Headline"
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;

exports[`6. should show topics when logged in or shared 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some byline"
          name="author"
        />
        <meta
          content="Some Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          property="og:image"
        />
        <meta
          content="Some Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          name="twitter:image"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    SOME LABEL
                  </div>
                </div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Headline
                </h1>
                <div
                  aria-level="2"
                  role="heading"
                >
                  Some Standfirst
                </div>
                <div>
                  <ArticleFlags
                    flags={
                      Array [
                        Object {
                          "expiryTime": "2019-03-14T12:00:00.000Z",
                          "type": "NEW",
                        },
                      ]
                    }
                  />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks
                        ast={
                          Array [
                            Object {
                              "byline": Array [
                                Object {
                                  "attributes": Object {},
                                  "children": Array [
                                    Object {
                                      "attributes": Object {
                                        "value": "Some byline",
                                      },
                                      "children": Array [],
                                      "name": "text",
                                    },
                                  ],
                                  "name": "inline",
                                },
                              ],
                            },
                          ]
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <nav>
                <ArticleTopics
                  topics={
                    Array [
                      Object {
                        "name": "Topic",
                        "slug": "topic",
                      },
                    ]
                  }
                />
              </nav>
            </div>
          </div>
          <div>
            <figure>
              <div>
                <div>
                  <div>
                    <img
                      alt="Some Caption"
                      fetchpriority="high"
                      src="https://crop169.io?resize=360"
                      srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                    />
                  </div>
                </div>
              </div>
              <figcaption>
                <div>
                  <div>
                    <div>
                      <div>
                        Some Caption
                      </div>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SOME CREDITS",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </figcaption>
            </figure>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks
                    ast={
                      Array [
                        Object {
                          "byline": Array [
                            Object {
                              "attributes": Object {},
                              "children": Array [
                                Object {
                                  "attributes": Object {
                                    "value": "Some byline",
                                  },
                                  "children": Array [],
                                  "name": "text",
                                },
                              ],
                              "name": "inline",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              data-tc-sticky-placeholder={true}
            />
            <div
              data-tc-sticky-container={true}
            >
              <div>
                <div
                  data-tc-sticky-sizer={true}
                >
                  <SaveAndShareBar
                    articleHeadline="Some Headline"
                    articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                    articleUrl="https://url.io"
                    savingEnabled={true}
                    sharingEnabled={true}
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <p>
            Some content
          </p>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline="Some Headline"
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticleSlice={
              Object {
                "__typename": "StandardSlice",
                "items": Array [
                  Object {
                    "article": Object {
                      "__typename": "Article",
                      "bylines": Array [],
                      "hasVideo": false,
                      "headline": "RA Headline",
                      "id": "ra-1",
                      "label": "RA Label",
                      "leadAsset": Object {
                        "__typename": "Image",
                        "crop169": Object {
                          "__typename": "Crop",
                          "url": "https://racrop169.io",
                        },
                        "crop32": Object {
                          "__typename": "Crop",
                          "url": "https://racrop32.io",
                        },
                        "title": "RA Title",
                      },
                      "publicationName": "TIMES",
                      "publishedTime": "2015-03-23T19:39:39.000Z",
                      "shortHeadline": "Headline",
                      "shortIdentifier": "2k629tpvh",
                      "slug": "this-is-slug",
                      "summary105": Array [],
                      "summary125": Array [],
                      "summary145": Array [],
                      "summary160": Array [],
                      "summary175": Array [],
                      "summary225": Array [],
                      "url": "https://ra.io",
                    },
                  },
                ],
              }
            }
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;

exports[`7. an article with no byline 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          property="og:image"
        />
        <meta
          content="Some Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          name="twitter:image"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Organization","name":"The Times"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <div>
                    SOME LABEL
                  </div>
                </div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Headline
                </h1>
                <div
                  aria-level="2"
                  role="heading"
                >
                  Some Standfirst
                </div>
                <div>
                  <ArticleFlags
                    flags={
                      Array [
                        Object {
                          "expiryTime": "2019-03-14T12:00:00.000Z",
                          "type": "NEW",
                        },
                      ]
                    }
                  />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <figure>
              <div>
                <div>
                  <div>
                    <img
                      alt="Some Caption"
                      fetchpriority="high"
                      src="https://crop169.io?resize=360"
                      srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                    />
                  </div>
                </div>
              </div>
              <figcaption>
                <div>
                  <div>
                    <div>
                      <div>
                        Some Caption
                      </div>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SOME CREDITS",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </figcaption>
            </figure>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <p>
            Some content
          </p>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline="Some Headline"
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticleSlice={
              Object {
                "__typename": "StandardSlice",
                "items": Array [
                  Object {
                    "article": Object {
                      "__typename": "Article",
                      "bylines": Array [],
                      "hasVideo": false,
                      "headline": "RA Headline",
                      "id": "ra-1",
                      "label": "RA Label",
                      "leadAsset": Object {
                        "__typename": "Image",
                        "crop169": Object {
                          "__typename": "Crop",
                          "url": "https://racrop169.io",
                        },
                        "crop32": Object {
                          "__typename": "Crop",
                          "url": "https://racrop32.io",
                        },
                        "title": "RA Title",
                      },
                      "publicationName": "TIMES",
                      "publishedTime": "2015-03-23T19:39:39.000Z",
                      "shortHeadline": "Headline",
                      "shortIdentifier": "2k629tpvh",
                      "slug": "this-is-slug",
                      "summary105": Array [],
                      "summary125": Array [],
                      "summary145": Array [],
                      "summary160": Array [],
                      "summary175": Array [],
                      "summary225": Array [],
                      "url": "https://ra.io",
                    },
                  },
                ],
              }
            }
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;

exports[`8. an article with no label 1`] = `
<div>
  <div>
    <div
      id="article-marketing-header"
    />
    <article
      data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
      data-article-sectionname="Some Section"
      id="article-main"
    >
      <Helmet
        encodeSpecialCharacters={false}
      >
        <title>
          Some Headline
           | 
          Some Section | 
          The Times
        </title>
        <meta
          content="max-image-preview:large"
          name="robots"
        />
        <meta
          content="Some Headline"
          name="article:title"
        />
        <meta
          content="The Times"
          name="article:publication"
        />
        <meta
          content="Some byline"
          name="author"
        />
        <meta
          content="Some Headline"
          property="og:title"
        />
        <meta
          content="article"
          property="og:type"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          property="og:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          property="og:image"
        />
        <meta
          content="Some Headline"
          name="twitter:title"
        />
        <meta
          content="summary_large_image"
          name="twitter:card"
        />
        <meta
          content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
          name="twitter:url"
        />
        <meta
          content="https://crop169.io?resize=1200"
          name="twitter:image"
        />
        <script
          type="application/ld+json"
        >
          {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"},"articleSection":"Some Section"}
        </script>
      </Helmet>
      <div>
        <AdContainer
          slotName="header"
        />
      </div>
      <main>
        <div>
          <div>
            <div>
              <div>
                <h1
                  aria-level="1"
                  role="heading"
                >
                  Some Headline
                </h1>
                <div
                  aria-level="2"
                  role="heading"
                >
                  Some Standfirst
                </div>
                <div>
                  <ArticleFlags
                    flags={
                      Array [
                        Object {
                          "expiryTime": "2019-03-14T12:00:00.000Z",
                          "type": "NEW",
                        },
                      ]
                    }
                  />
                </div>
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <div>
                      <ArticleBylineWithLinks
                        ast={
                          Array [
                            Object {
                              "byline": Array [
                                Object {
                                  "attributes": Object {},
                                  "children": Array [
                                    Object {
                                      "attributes": Object {
                                        "value": "Some byline",
                                      },
                                      "children": Array [],
                                      "name": "text",
                                    },
                                  ],
                                  "name": "inline",
                                },
                              ],
                            },
                          ]
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <DatePublication
                        date="2015-03-13T18:54:58.000Z"
                        publication="TIMES"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <figure>
              <div>
                <div>
                  <div>
                    <img
                      alt="Some Caption"
                      fetchpriority="high"
                      src="https://crop169.io?resize=360"
                      srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                    />
                  </div>
                </div>
              </div>
              <figcaption>
                <div>
                  <div>
                    <div>
                      <div>
                        Some Caption
                      </div>
                      <div
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "SOME CREDITS",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </figcaption>
            </figure>
          </div>
          <div>
            <div>
              <div>
                <div>
                  <ArticleBylineWithLinks
                    ast={
                      Array [
                        Object {
                          "byline": Array [
                            Object {
                              "attributes": Object {},
                              "children": Array [
                                Object {
                                  "attributes": Object {
                                    "value": "Some byline",
                                  },
                                  "children": Array [],
                                  "name": "text",
                                },
                              ],
                              "name": "inline",
                            },
                          ],
                        },
                      ]
                    }
                  />
                </div>
              </div>
              <div>
                <div>
                  <DatePublication
                    date="2015-03-13T18:54:58.000Z"
                    publication="TIMES"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <article>
          <p>
            Some content
          </p>
          <div>
            <h2>
              Sponsored
            </h2>
            <div
              data-parent="group-3"
              id="advert-inarticle-native-1"
            />
            <div
              data-parent="group-3"
              id="advert-inarticle-native-2"
            />
          </div>
          <div
            id="paywall-portal-article-footer"
          />
          <ArticleExtras
            articleHeadline="Some Headline"
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
            commentsEnabled={true}
            publishedTime="2015-03-13T18:54:58.000Z"
            relatedArticleSlice={
              Object {
                "__typename": "StandardSlice",
                "items": Array [
                  Object {
                    "article": Object {
                      "__typename": "Article",
                      "bylines": Array [],
                      "hasVideo": false,
                      "headline": "RA Headline",
                      "id": "ra-1",
                      "label": "RA Label",
                      "leadAsset": Object {
                        "__typename": "Image",
                        "crop169": Object {
                          "__typename": "Crop",
                          "url": "https://racrop169.io",
                        },
                        "crop32": Object {
                          "__typename": "Crop",
                          "url": "https://racrop32.io",
                        },
                        "title": "RA Title",
                      },
                      "publicationName": "TIMES",
                      "publishedTime": "2015-03-23T19:39:39.000Z",
                      "shortHeadline": "Headline",
                      "shortIdentifier": "2k629tpvh",
                      "slug": "this-is-slug",
                      "summary105": Array [],
                      "summary125": Array [],
                      "summary145": Array [],
                      "summary160": Array [],
                      "summary175": Array [],
                      "summary225": Array [],
                      "url": "https://ra.io",
                    },
                  },
                ],
              }
            }
            relatedArticlesVisible={false}
            savingEnabled={true}
            section="Some Section"
            sharingEnabled={true}
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </article>
      </main>
      <AdContainer
        slotName="pixel"
      />
      <AdContainer
        slotName="pixelteads"
      />
      <AdContainer
        slotName="pixelskin"
      />
    </article>
  </div>
</div>
`;
